# svtui

./: Cargo.toml  readme.md  svt.rs
src/: main.rs  svt.rs
