[package]
name = "svtui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
crossterm = { version = "0.19", features = [ "serde" ] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }